--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'lambda/**'
+      - '.github/workflows/pull-request-lambda.yml'
+      - '.github/workflows/deploy-lambda.yml'
+      - '.github/workflows/merge-lambda.yml'
+      - '.github/workflows/rollback-lambda.yml'
 
 jobs:
   deploy:
