--- a/lambda/package.json
+++ b/lambda/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@types/aws-lambda": "^8.10.147",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
