--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "db:test": "ts-node -r tsconfig-paths/register scripts/db-seed/test-connection.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lambda:build": "cd lambda && npm run build",
-    "lambda:test": "cd lambda && npm test",
-    "lambda:package": "cd lambda && npm run package",
     "lambda:clean": "cd lambda && npm run clean",
+    "lambda:lint": "cd lambda && npm run lint",
+    "lambda:package": "cd lambda && npm run package",
+    "lambda:test": "cd lambda && npm test",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:lambda": "cd lambda && npm run lint",
     "prepare": "husky",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
