--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Run Unit Tests
         working-directory: lambda
-        run: npm test
+        run: npm run test:coverage
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
