--- a/.github/workflows/pull-request-lambda.yml
+++ b/.github/workflows/pull-request-lambda.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Run Jest Tests
         working-directory: lambda
-        run: npm run test
+        run: npm run test:coverage
 
       - name: Upload Coverage Report
         uses: actions/upload-artifact@v4
