--- a/cloudformation/crow-detector-ecs-task.yaml
+++ b/cloudformation/crow-detector-ecs-task.yaml
@@ -78,6 +78,8 @@ Resources:
               Value: '{{resolve:secretsmanager:crow-detector-keys:SecretString:pi-motion-public-key}}'
             - Name: PI_FEEDER_PUBLIC_KEY
               Value: '{{resolve:secretsmanager:crow-detector-keys:SecretString:pi-feeder-public-key}}'
+            - Name: LAMBDA_S3_PUBLIC_KEY
+              Value: '{{resolve:secretsmanager:crow-detector-keys:SecretString:lambda-s3-public-key}}'
             - Name: S3_BUCKET_NAME
               Value: !Sub 'crow-detector-images-${Environment}'
             - Name: AWS_REGION
