feat: add image processing for feed events

--- a/cloudformation/crow-detector-iam-roles.yaml
+++ b/cloudformation/crow-detector-iam-roles.yaml
@@ -61,6 +61,16 @@ Resources:
                 Action:
                   - s3:ListBucket
                 Resource: !Sub 'arn:${AWS::Partition}:s3:::crow-detector-images-${Environment}'
+        - PolicyName: RekognitionAccess
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - rekognition:DetectFaces
+                  - rekognition:DetectModerationLabels
+                  - rekognition:DetectLabels
+                Resource: '*'
 
 Outputs:
   TaskExecutionRoleArn:
