--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/bunyan": "^1.8.11",
     "@types/crypto-js": "^4.2.2",
+    "aws-sdk": "^2.1691.0",
     "bunyan": "^1.8.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -54,6 +55,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.2",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
