refactor: upgrade to SDK v3

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.872.0",
+    "@aws-sdk/client-rekognition": "^3.873.0",
+    "@aws-sdk/client-s3": "^3.873.0",
     "@aws-sdk/s3-request-presigner": "^3.872.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -47,7 +48,6 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/bunyan": "^1.8.11",
     "@types/crypto-js": "^4.2.2",
-    "aws-sdk": "^2.1691.0",
     "bunyan": "^1.8.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
