--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.60.0",
     "@aws-sdk/client-rekognition": "^3.873.0",
     "@aws-sdk/client-s3": "^3.873.0",
     "@aws-sdk/s3-request-presigner": "^3.872.0",
