--- a/cloudformation/crow-detector-iam-roles.yaml
+++ b/cloudformation/crow-detector-iam-roles.yaml
@@ -30,7 +30,9 @@ Resources:
               - Effect: Allow
                 Action:
                   - secretsmanager:GetSecretValue
-                Resource: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:crow-detector-db-${Environment}*'
+                Resource: 
+                  - !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:crow-detector-db-${Environment}*'
+                  - !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:crow-detector-claude-api-key*'
 
   TaskRole:
     Type: AWS::IAM::Role
