--- a/cloudformation/crow-detector-ecs-task.yaml
+++ b/cloudformation/crow-detector-ecs-task.yaml
@@ -86,6 +86,8 @@ Resources:
               Value: !Ref AWS::Region
             - Name: CLAUDE_MODEL
               Value: 'claude-3-opus-20240229'
+            - Name: FEED_COOLDOWN_HOURS
+              Value: '4'
           Secrets:
             - Name: RDS_USERNAME
               ValueFrom: !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:crow-detector-db-${Environment}:username::'
